tests/errors/first_stage/operation/not_found/not_found.am
.extern HI
mv r1, r2
LABEL: jump HI
